study gc type